# BEETL

./: .gitignore  CODING  LICENSE  Makefile.am  Makefile.in  README  README-developers  README.txt  README_METAGENOME_DATABASE  bootstrap_with_autotools  config.h.in  configure  configure.ac  configure.in  index.html  params.json  test_v_0_0_2.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: BEETL.md  FileFormats.md  Makefile  Makefile.am  Makefile.in
m4/: ax_check_zlib.m4  ax_cxx_compile_stdcxx_11.m4
redist/: gzstream.hh
scripts/: Makefile.am  Makefile.in  beetlExtract.py
scripts/BEETL-fastq/: Makefile.am  Makefile.in  beetl-fastq  beetl-fastq-index-lines.pl  index_lines.pl
scripts/CVS/: Entries  Repository
scripts/berta/: readSorter.pl  simulate_miseq_run.sh
scripts/endPosFile/: README  readEndPosFile.pl  readIntervalFile.pl
scripts/lcp/: Makefile.am  Makefile.in  applyLcpCutoff.pl
scripts/metagenomics/: parse.cpp
scripts/misc/: build.sh  shortToInt.pl
scripts/perSubsetDistributedLauncher/: Makefile.am  Makefile.in  README  beetl-tool-launchPerSubset  launchPerSubset.pl  mergeCorrectionsSets.pl
scripts/qualitySort/: Makefile  doubleSort.cpp
scripts/rna/: buildTranscriptDB.pl  merge_seqs.pl
scripts/runFolderConversion/: editPathsAndUse.makefile
scripts/testing/: createRandomTestSets.pl
scripts/tumourNormalFiltering/: Makefile.am  Makefile.in  beetl-flow-tumour-normal-fastq-filter  beetlflow-tumour-normal-filter.sh
share/: Makefile.am  Makefile.in
share/HardwareConstraints/: BeetlHardwareConstraints_amazon  BeetlHardwareConstraints_ukch_tst_lnmo01  BeetlHardwareConstraints_ukch_with_ssd
share/metaBeetl/: metaBeetlExtraNames.dmp
src/: Makefile  Makefile.am  Makefile.in
src/BCR/: BCR_BWTCollection.cpp  BCRexternalBWT.cpp  BCRexternalBWT.h  BCRexternalBWT.hh  BWTCollection.cpp  BWTCollection.h  BWTCollection.hh  BuildBCR.cpp  PredictiveEncoding.cpp  PredictiveEncoding.hh  Sorting.cpp  Sorting.h  Sorting.hh  TransposeFasta.cpp  TransposeFasta.h  TransposeFasta.hh
src/BCR/CVS/: Entries  Repository  Root
src/BCRext/: BCRext.cpp  BCRext.hh  BuildChromosomeBwt.cpp  BwtIndex.cpp  BwtIndex.hh  BwtReader.cpp  BwtReader.hh  BwtWriter.cpp  BwtWriter.hh  IndexBwt.cpp  MakeBWT.cpp  MergeChromosomeBwt.cpp  MergeChromosomeBwt.hh  Rank.cpp  Rank.h  Rank.hh  ReadBuffer.cpp  ReadBuffer.hh  implicit_sort.pl
src/BCRext/CVS/: Entries  Repository
src/CVS/: Entries  Repository
src/backtracker/: BackTrackerBase.cpp  BackTrackerBase.hh  IntervalHandlerBase.cpp  IntervalHandlerBase.hh  OneBwtBackTracker.cpp  OneBwtBackTracker.hh  Range.cpp  Range.hh  RangeStore.cpp  RangeStore.hh  TwoBwtBackTracker.cpp  TwoBwtBackTracker.hh
src/countWords/: BackTracker.cpp  BackTracker.hh  CountWords.cpp  CountWords.hh  IntervalHandlerBase.cpp  IntervalHandlerBase.hh  IntervalHandlerMetagenome.cpp  IntervalHandlerMetagenome.hh  IntervalHandlerReference.cpp  IntervalHandlerReference.hh  IntervalHandlerSplice.cpp  IntervalHandlerSplice.hh  IntervalHandlerTumourNormal.cpp  IntervalHandlerTumourNormal.hh  Range.cpp  Range.hh  RangeStore.cpp  RangeStore.hh
src/countWords/CVS/: Entries  Repository
src/errors/: AlignmentParameters.hh  BwtCorrector.cpp  BwtCorrector.hh  BwtCorrectorIntervalHandler.cpp  BwtCorrectorIntervalHandler.hh  BwtCorrectorParameters.hh  CorrectionAligner.cpp  CorrectionAligner.hh  ErrorCorrectionRange.cpp  ErrorCorrectionRange.hh  ErrorInfo.cpp  ErrorInfo.hh  HiTEC.cpp  HiTEC.hh  HiTECError.cpp  HiTECError.hh  HiTECErrorLocation.cpp  HiTECErrorLocation.hh  HiTECIntervalHandler.cpp  HiTECIntervalHandler.hh  HiTECParameters.cpp  HiTECParameters.hh  HiTECStats.cpp  HiTECStats.hh  OneBwtBackTracker.cpp  OneBwtBackTracker.hh  WitnessReader.cpp  WitnessReader.hh
src/frontends/: AlignCorrectorStrings.cpp  AlignCorrectorStrings.hh  BeetlBwt.cpp  BeetlBwt.hh  BeetlCompare.cpp  BeetlCompare.hh  BeetlConvert.cpp  BeetlConvert.hh  BeetlCorrect.cpp  BeetlCorrect.hh  BeetlExtend.cpp  BeetlExtend.hh  BeetlHiTEC.cpp  BeetlHiTEC.hh  BeetlIndex.cpp  BeetlIndex.hh  BeetlSearch.cpp  BeetlSearch.hh  BeetlUnbwt.cpp  BeetlUnbwt.hh  Common.cpp  Common.hh  DatasetMetadata.cpp  DatasetMetadata.hh  Makefile.am  Makefile.in  beetl  beetl.in
src/libzoo/cli/: Common.cpp  Common.hh  ToolParameters.cpp  ToolParameters.hh
src/libzoo/io/: Bcl.cpp  Bcl.hh  FastOFStream.cpp  FastOFStream.hh
src/libzoo/util/: AutoGrowVector.hh  ColorText.cpp  ColorText.hh  Logger.cpp  Logger.hh  TemporaryFilesManager.cpp  TemporaryFilesManager.hh
src/metagenomics/: BuildChromosomeBwt.cpp  Config.hh  ConvertMetagenomicRangesToTaxa.cpp  GenomesToSingleSeq.cpp  Krona.hh  Makefile.am  Makefile.in  MergeBacteria.cpp  OutputTsv.hh  arrayBWT.sh  findCertainTaxLevel.cpp  metaShared.hh  metabeetl-db-arrayBWT.sh  parse.cpp
src/parameters/: BwtParameters.hh  CompareParameters.hh  ConvertParameters.hh  ExtendParameters.hh  IndexParameters.hh  SearchParameters.hh  ToolParameters.hh  UnbwtParameters.hh
src/scripts/CVS/: Repository
src/search/: Extender.cpp  Extender.hh  ExtenderIntervalHandler.cpp  ExtenderIntervalHandler.hh  IntervalFile.cpp  IntervalFile.hh  KmerSearchIntervalHandler.cpp  KmerSearchIntervalHandler.hh  KmerSearchRange.cpp  KmerSearchRange.hh  SearchUsingBacktracker.cpp  SearchUsingBacktracker.hh
src/shared/: Algorithm.hh  Alphabet.hh  Beetl.cpp  Beetl.hh  Config.hh  EndPosFile.cpp  EndPosFile.hh  Filename.cpp  Filename.hh  FragmentedVector.hh  LetterCount.hh  Logger.cpp  Logger.hh  SeqReader.cpp  SeqReader.hh  SequenceExtractor.cpp  SequenceExtractor.hh  TemporaryFilesManager.cpp  TemporaryFilesManager.hh  Timer.cpp  Timer.hh  Tools.cpp  Tools.h  Tools.hh  Types.hh
src/shared/CVS/: Entries  Repository
tests/: Makefile.am  Makefile.in  large-test-beetl-compare-tumour-normal-chr21  large-test-beetl-compare-tumour-normal-phix  test-beetl-bwt  test-beetl-compare  test-beetl-correct  test-beetl-search  test-new-beetl  test-old-Beetl
tests/data/: kmersToSearch  testBeetlCompare.dataset1.fasta  testBeetlCompare.dataset2.fasta  testBeetlCorrect.30x10k.fasta  (+2 more)
(+42 files in other folders)
