#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT(BEETL, 0.1.0, acox@illumina.com)
AM_INIT_AUTOMAKE(BEETL, 0.1.0)

AC_CONFIG_SRCDIR([src/countWords/IntervalHandlerMetagenome.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_SETVBUF_REVERSED
AC_FUNC_STAT
AC_CHECK_FUNCS([floor gettimeofday memset mkdir strchr strtoul strcasecmp])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/frontends/Makefile
                 tests/Makefile
                ])
AC_OUTPUT
