#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT(BEETL, 0.3.0, acox@illumina.com)
AM_INIT_AUTOMAKE

AC_CONFIG_SRCDIR([src/frontends/BeetlBwt.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.
AC_ARG_WITH([seqan],
    AS_HELP_STRING([--with-seqan=PATH], [Path to Seqan package]))

SEQAN_PATH="not found (Metagenomics tool 'makeBWTSkew' will be unavailable - download at www.seqan.de)"
SEQAN_CXXFLAGS=
AS_IF([test "x$with_seqan" != "x" -a "x$with_seqan" != "xno"],
      [AC_CHECK_FILE([$with_seqan/seqan/index.h],
        [AC_SUBST([SEQAN_PATH], ["$with_seqan"])
         AC_SUBST([SEQAN_CXXFLAGS], ["-I$with_seqan -DHAVE_SEQAN"])
        ],
        [AC_MSG_ERROR([Seqan header file not found in $with_seqan])]
       )
      ]
     )

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_SETVBUF_REVERSED
AC_FUNC_STAT
AC_CHECK_FUNCS([floor gettimeofday memset mkdir strchr strtoul strcasecmp posix_fadvise])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/frontends/Makefile
                 src/frontends/beetl
                 src/metagenomics/Makefile
                 tests/Makefile
                ])
AC_OUTPUT

echo "
Note:
    If you have gcc4.7 or over, you can use \"export CXXFLAGS='-DUSE_OPENMP -fopenmp'\" before configure to enable parallel BWT creation

Configure summary:
    Packages for metagenomics:
        Seqan .....: $SEQAN_PATH
"
